# OSDI26-CoPilotIO

./: .gitignore  README.md
bam/: .gitignore
bam/include/: nvm_admin.h  nvm_cmd.h  nvm_parallel_queue.h  nvm_types.h  page_cache.h
bam/module/: pci.c
bam/src/: admin.cpp
copilot-io/: CMakeLists.txt
copilot-io/include/: buffer.h  copilot.h  ctrl.h  page_cache.h  queue.h
copilot-io/module/: map.c
copilot-io/src/: lib_util.h
gdrcopy/: .gitignore
gdrcopy/src/gdrdrv/: .nv-p2p-dummy.o.d
microbenchmark/: CMakeLists.txt  bam_read_bw.cu  copilotio_example.cu  copilotio_read_bw.cu  plot.py  run.sh
scripts/: bash_utils.sh  pci_bind_helpper.sh
